@@ -25,16 +25,31 @@
 
 using namespace std;
 
+const char *GFGlyphTracer::CACHE_PATH = 0;
+
+
+GFGlyphTracer::GFGlyphTracer (istream &is, double upp) : GFTracer(is, upp)
+{
+	_glyph = new Glyph;
+	_transfered = false;
+}
+
+
+GFGlyphTracer::~GFGlyphTracer () {
+	if (!_transfered)
+		delete _glyph;
+}
+
 
 void GFGlyphTracer::moveTo (double x, double y) {
 	LPair p(x, y);
-	_glyph.addCommand(new GlyphMoveTo(p));
+	_glyph->addCommand(new GlyphMoveTo(p));
 }
 
 
 void GFGlyphTracer::lineTo (double x, double y) {
 	LPair p(x, y);
-	_glyph.addCommand(new GlyphLineTo(p));
+	_glyph->addCommand(new GlyphLineTo(p));
 }
 
 
@@ -42,16 +57,32 @@ void GFGlyphTracer::curveTo (double c1x, double c1y, double c2x, double c2y, dou
 	LPair p1(c1x, c1y);
 	LPair p2(c2x, c2y);
 	LPair p3(x, y);
-	_glyph.addCommand(new GlyphCubicTo(p1, p2, p3));
+	_glyph->addCommand(new GlyphCubicTo(p1, p2, p3));
 }
 
 
 void GFGlyphTracer::closePath () {
-	_glyph.addCommand(new GlyphClosePath());
+	_glyph->addCommand(new GlyphClosePath());
 }
 
 
 void GFGlyphTracer::endChar (UInt32 c) {
-	_glyph.clear();
+	if (_transfered) {
+		_glyph = new Glyph;
+		_transfered = false;
+	}
+	else
+		_glyph->clear();
 	GFTracer::endChar(c);
 }
+
+
+/** Returns a pointer to the current glyph object and transfers its ownership. That means 
+ *  the caller is responsible for deleting the object after its usage. GFGlyphTracer doesn't
+ *  care for it any longer. To just retrieve the glyph without transferring ownership, use
+ *  getGlyph(). */
+Glyph* GFGlyphTracer::transferGlyph () {
+	_transfered = true;
+	return _glyph;
+}
+
